# hato

./: CMakeLists.txt  README.md  cplexmodel.cpp  cplexmodel.h  generator.cpp  generator.h  hato.cpp
cmake/: FindCPLEX.cmake
